# ZEN-Trading

./: .env.example  .gitignore  Devon.txt  README.md  andrew.txt  dalton.txt  devon.txt  docker-compose.yaml  jason.txt  pyproject.toml  vercel.json
backend/: .gitignore  DOCKERFILE  Dockerfile  README.md  demo-main.py  pyproject.toml  requirements.txt  startup.py
backend/api/: APIstockInfo.py  talk-to-frontend.py  yfinance.py
backend/data/: 100_stocks.json  horoscope_sites.json  sign_matching.json  stocks.json
backend/db/: connection.py
backend/dev/: test_yfinance_module.py  yfinance_module.py
backend/django_app/: admin.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py
backend/django_app/management/commands/: clear_db.py  fetch_initial_prices.py  generate_horoscopes.py  populate_stocks.py  populate_zodiac_matching.py  setup_horoscope_schedule.py  setup_price_updates.py
backend/django_app/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_starting_balance_userholdings_and_more.py  0004_stock.py  0005_zodiacsignmatching.py  0006_userstockpreference.py  0007_stockholding_purchase_date_and_more.py  0008_dailyhoroscope.py
backend/django_app/utils/: __init__.py  horoscope_generator.py  yfinance_module.py
figs/: .gitignore  README.md  auth-flow.py  pyproject.toml
frontend/: .dockerignore  .gitignore  DOCKERFILE  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
testing/: DOCKERFILE  README.md  lang-horoscope.py  run-all-sell-tests.js  run-complete-flow-loop.js  run-horoscope-tests-loop.js  (+12 more)
(+58 files in other folders)
